# fluxgraph

./: .clang-format  .clang-tidy  .editorconfig  .git-blame-ignore-revs  .gitignore  .markdownlint.json  .markdownlint.jsonc  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  TODO.md  justfile  pyproject.toml  renovate.json  requirements-lock.txt  tsan.supp  valgrind.supp  vcpkg-configuration.json  vcpkg.json  version-locations.txt
.github/workflows/: benchmark-evidence.yml  ci.yml  clang-tidy.yml  dependency-scan.yml  dimensional-validation-evidence.yml  docs.yml  hardening.yml  metrics.yml  numerical-validation-evidence.yml  release.yml
benchmarks/policy/: README.md  baseline_template.json  bench_policy.json
benchmarks/policy/baselines/: ci-dedicated.windows-2022.template.json  ci-hosted.windows-2022.json
cmake/: AddFuzzTarget.cmake
docs/: ARCHITECTURE.md  EMBEDDING.md  TRANSFORMS.md  api-reference.md  dependencies.md  graph-visualization.md  index.md  numerical-methods.md  performance-benchmarks.md  schema-json.md  schema-yaml.md  state-space-siso-discrete.md  validation-methodology.md
examples/: CMakeLists.txt  README.md
examples/01_basic_transform/: main.cpp
examples/02_thermal_mass/: main.cpp
examples/03_json_graph/: CMakeLists.txt  graph.json  main.cpp  state_space_siso_discrete.json
examples/04_yaml_graph/: CMakeLists.txt  graph.yaml  main.cpp
examples/05_thermal_rc2/: main.cpp
examples/06_first_order_process/: main.cpp
examples/07_second_order_process/: main.cpp
examples/08_mass_spring_damper/: main.cpp
examples/09_dc_motor/: main.cpp
examples/10_state_space_siso_discrete/: CMakeLists.txt  main.cpp
fuzz/: CMakeLists.txt  fuzz_json_loader.cpp  fuzz_yaml_loader.cpp
fuzz/corpus/fuzz_json_loader/: model_only.json  simple.json
fuzz/corpus/fuzz_yaml_loader/: state_space_siso_discrete.yaml
include/fluxgraph/: command.hpp  engine.hpp  version.hpp
include/fluxgraph/core/: namespace.hpp  signal_store.hpp  types.hpp  units.hpp
include/fluxgraph/graph/: compiler.hpp  param_utils.hpp  spec.hpp
include/fluxgraph/loaders/: json_loader.hpp  yaml_loader.hpp
include/fluxgraph/model/: dc_motor.hpp  first_order_process.hpp  integration.hpp  interface.hpp  mass_spring_damper.hpp  second_order_process.hpp  state_space_siso_discrete.hpp  thermal_integration.hpp  thermal_mass.hpp  thermal_rc2.hpp
include/fluxgraph/transform/: deadband.hpp  delay.hpp  first_order_lag.hpp  interface.hpp  linear.hpp  moving_average.hpp  noise.hpp  rate_limiter.hpp  saturation.hpp  unit_convert.hpp
include/fluxgraph/viz/: dot_emitter.hpp  format.hpp  graphviz_renderer.hpp
scripts/: README.md  bench.ps1  bench.sh  evaluate_benchmarks.py  generate_proto_python.sh  promote_benchmark_baseline.py  run_benchmarks.py  run_dimensional_validation.py  run_numerical_validation.py
server/: CMakeLists.txt  main.cpp  service.cpp  service.hpp
src/: engine.cpp
src/core/: namespace.cpp  signal_store.cpp  units.cpp
src/graph/: compiler.cpp  param_utils.cpp
src/graph/compiler/: algorithms.cpp  algorithms.hpp  common.cpp  common.hpp  dimensional.cpp  dimensional.hpp  registry.cpp  registry.hpp  registry_builtins.hpp  registry_common.cpp  registry_models_control.cpp  registry_models_electromechanical.cpp  registry_models_mechanical.cpp  registry_models_state_space.cpp  registry_models_thermal.cpp  registry_transforms.cpp
src/loaders/: json_loader.cpp  param_parse_limits.hpp  yaml_loader.cpp
src/model/: dc_motor.cpp  first_order_process.cpp  mass_spring_damper.cpp  second_order_process.cpp  stability_common.hpp  state_space_siso_discrete.cpp  thermal_integration.cpp  thermal_mass.cpp  thermal_rc2.cpp
tests/: .clang-tidy  CMakeLists.txt
tests/analytical/: dc_motor_analytical_test.cpp  delay_analytical_test.cpp  first_order_lag_analytical_test.cpp  first_order_process_analytical_test.cpp  mass_spring_damper_analytical_test.cpp  second_order_process_analytical_test.cpp  state_space_siso_discrete_analytical_test.cpp  thermal_mass_analytical_test.cpp  thermal_rc2_analytical_test.cpp  transform_analytical_test.cpp
tests/benchmarks/: json_loader_bench.cpp  namespace_bench.cpp  signal_store_bench.cpp  tick_bench.cpp  yaml_loader_bench.cpp
tests/golden/: viz_simple_graph.dot
tests/integration/: determinism_test.cpp  diagram_cli_e2e.cmake  multi_model_test.cpp
tests/unit/: command_test.cpp  compiler_test.cpp  dc_motor_test.cpp  engine_test.cpp  first_order_process_test.cpp  json_loader_test.cpp  mass_spring_damper_test.cpp  namespace_test.cpp  second_order_process_test.cpp  signal_store_test.cpp  state_space_siso_discrete_test.cpp  thermal_mass_test.cpp  thermal_rc2_test.cpp  transform_deadband_test.cpp  transform_delay_test.cpp  transform_lag_test.cpp  transform_linear_test.cpp  transform_moving_average_test.cpp  transform_noise_test.cpp  transform_rate_limiter_test.cpp  transform_saturation_test.cpp  unit_convert_transform_test.cpp  unit_registry_test.cpp  viz_dot_emitter_test.cpp  viz_dot_golden_test.cpp  viz_format_test.cpp  viz_graphviz_renderer_test.cpp  yaml_loader_test.cpp
tests/validation/: thermal_mass_validation.cpp
tools/: CMakeLists.txt
tools/fluxgraph_diagram/: main.cpp
tools/viz_core/: dot_emitter.cpp  format.cpp  graphviz_renderer.cpp
triplets/: x64-linux-tsan.cmake  x64-windows-v145.cmake
