[project]
name = "fluxgraph"
version = "0.0.0"
description = "FluxGraph – Python integration test and validation tooling"
requires-python = ">=3.12"
# No runtime dependencies – this is a C++ project.
# Python is used only for gRPC integration tests and validation.
dependencies = []

[project.optional-dependencies]
dev = [
    "grpcio>=1.78.0,<2.0.0",
    "grpcio-tools>=1.78.0,<2.0.0",
    "protobuf>=6.33.0,<7.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "pytest>=9.1.0,<9.2.0",
    "ruff>=0.15.0,<1.0.0",
    "mypy>=2.2.0,<2.3.0",
]

[tool.uv]
# Not a distributable Python package – deps are for test tooling only.
package = false

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    "build",
    "build-server",
    "build-windows-server",
    "build-windows-server-release",
    "build-test",
    "vcpkg_installed",
]

[tool.ruff.lint]
select = ["E", "F"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--strict-markers -ra -vv --tb=short"
testpaths = ["tests"]
markers = [
    "integration: integration tests requiring a running server",
    "slow: tests that take longer than 1s",
    "stress: stress/performance tests",
]
filterwarnings = [
    "ignore::DeprecationWarning:grpc.*",  # gRPC python often has deprecation warnings
    "ignore::DeprecationWarning:google.protobuf.*",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120
target-version = ['py37']

[tool.mypy]
python_version = "3.12"
files = ["tests"]
strict = true
ignore_missing_imports = true
warn_unused_configs = true
show_error_codes = true
exclude = "(^build/|^build-server/|^build-windows-server/|^build-windows-server-release/|^build-test/|^vcpkg_installed/)"

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
